[gd_scene load_steps=13 format=1]

[ext_resource path="res://InGameUI.gd" type="Script" id=1]
[ext_resource path="res://fonts/timeLabel.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/countdowntimer.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/p1score.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/newRound.tres" type="DynamicFont" id=5]
[ext_resource path="res://postGame.gd" type="Script" id=6]
[ext_resource path="res://fonts/finalScore.tres" type="DynamicFont" id=7]
[ext_resource path="res://fonts/MainMenu.tres" type="DynamicFont" id=8]
[ext_resource path="res://GameOverButtons.tscn" type="PackedScene" id=9]
[ext_resource path="res://Pause.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/block.png" type="Texture" id=11]

[sub_resource type="ColorRamp" id=1]

offsets = FloatArray( 0.00487805, 0.0829268, 0.868293, 1 )
colors = ColorArray( 0, 0, 0, 0, 1, 0, 0, 1, 0.472656, 0.28064, 0.28064, 1, 1, 1, 1, 0 )

[node name="InGameUI" type="CanvasLayer"]

process/pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="MidMatch" type="Control" parent="."]

process/pause_mode = 1
editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 1024.0

[node name="timeLabel" type="Label" parent="MidMatch"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 500.0
margin/top = -10.0
margin/right = 500.0
margin/bottom = 79.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.835294, 1, 1 )
text = "TIME"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="timeDisplay" type="Label" parent="MidMatch"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 400.0
margin/top = 45.0
margin/right = 400.0
margin/bottom = 202.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.964706, 0.835294, 1, 1 )
text = "99"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="p1Score" type="Label" parent="MidMatch"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 196.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0, 0.505882, 1 )
text = "00"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="p2Score" type="Label" parent="MidMatch"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 640.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 210.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.258824, 0.776471, 1, 1 )
text = "00"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="MidMatch"]

process_mode = 1
wait_time = 99.0
one_shot = true
autostart = false

[node name="PreMatch" type="Control" parent="."]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="newGameCount" type="Label" parent="PreMatch"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 100.0
margin/top = 275.0
margin/right = 100.0
margin/bottom = 100.0
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="PreMatch"]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[node name="PostGame" type="Control" parent="."]

process/pause_mode = 2
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 180.0
margin/right = 1280.0
margin/bottom = 1024.0
script/script = ExtResource( 6 )

[node name="p1FinalScore" type="Label" parent="PostGame"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 100.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 1, 0, 0.505882, 1 )
text = "00"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="p2FinalScore" type="Label" parent="PostGame"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 640.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 100.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.258824, 0.776471, 1, 1 )
text = "00"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="gameover" type="Label" parent="PostGame"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -200.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.988235, 0.407843, 0.992157, 1 )
text = "GAME   OVER"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="p1WL" type="Label" parent="PostGame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 0.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 0, 0.505882, 1 )
text = "WIN"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="p2WL" type="Label" parent="PostGame"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 640.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.258824, 0.776471, 1, 1 )
text = "LOSE"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Buttons" parent="PostGame" instance=ExtResource( 9 )]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
margin/left = 320.0
margin/top = 320.0
margin/right = 320.0
margin/bottom = 0.0

[node name="Pause" parent="." instance=ExtResource( 10 )]

visibility/visible = false
margin/left = 320.0
margin/top = 300.0
margin/right = 960.0
margin/bottom = 812.0

[node name="VictoryParticles" type="Particles2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 320, 200 )
config/amount = 128
config/lifetime = 4.0
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 250, 0 )
config/local_space = false
config/texture = ExtResource( 11 )
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 200.0
params/spin_velocity = 1.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.5
params/final_size = 0.5
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spread = 1.0
randomness/spin_velocity = 1.0
randomness/hue_variation = 1.0
color/color = Color( 1, 0, 0, 1 )
color/color_ramp = SubResource( 1 )

[connection signal="timeout" from="PreMatch/Timer" to="." method="_on_PreMatchTimer_timeout"]

[connection signal="pressed" from="PostGame/Buttons/Rematch" to="PostGame" method="_on_Rematch_pressed"]

[connection signal="pressed" from="PostGame/Buttons/Exit" to="PostGame" method="_on_Exit_pressed"]


[editable path="PostGame/Buttons"]
